--- a/pizza.css
+++ b/pizza.css
@@ -58,6 +58,7 @@ img{
 .radio{
     margin-right: 50px;
     margin-bottom: 50px;
+    text-align: center;
 }
 .checkbox-control{
     display: inline-flex;
